--- a/react-app/src/components/login_components/login_stylesheets/Login.css
+++ b/react-app/src/components/login_components/login_stylesheets/Login.css
@@ -1,33 +1,45 @@
-.login {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .login__container {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    background-color: #dcdcdc;
-    padding: 30px;
-  }
-  .login__textBox {
-    padding: 10px;
-    font-size: 18px;
-    margin-bottom: 10px;
-  }
-  .login__btn {
-    padding: 10px;
-    font-size: 18px;
-    margin-bottom: 10px;
-    border: none;
-    color: white;
-    background-color: black;
-  }
-  .login__google {
-    background-color: #4285f4;
-  }
-  .login div {
-    margin-top: 7px;
-  }
+.login_panel {
+  height: 100vh;
+  width: 30vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.login_container {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background-color: #00000080;
+  padding: 30px;
+}
+.login_textBox {
+  padding: 10px;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+.login_btn {
+  padding: 10px;
+  font-size: 18px;
+  margin-bottom: 10px;
+  border: none;
+  color: white;
+  background-color: black;
+}
+.login_google {
+  background-color: #4285f4;
+}
+.login div {
+  margin-top: 7px;
+}
+.login_link {
+  background: none;
+  border: none;
+  padding: 10px;
+  text-decoration: underline;
+  color: white;
+}
+.login_prompt {
+  padding-top: 10px;
+  color: white;
+}
