--- a/react-app/src/components/homepage_components/homepage_stylsheets/Home.css
+++ b/react-app/src/components/homepage_components/homepage_stylsheets/Home.css
@@ -4,6 +4,6 @@
     align-items: center;
     flex-direction: column;
     width: 100vw;
-    min-height: 100vh;
-    background: linear-gradient(45deg, rgba(0,255,241,0.3) 0%, rgb(255, 191, 250) 100%), linear-gradient(0deg, rgba(0,0,0,0.5) 0%, rgb(255, 255, 255) 100%);
+    min-height: 200vh;
+    background: linear-gradient(0deg, rgba(0,33,61,1) 0%, rgba(0,122,163,1) 100%), linear-gradient(0deg, rgba(0,0,0,0.2) 0%, rgb(255, 255, 255) 100%);
 }
