--- a/react-app/src/components/global_components/global_stylesheets/Header.css
+++ b/react-app/src/components/global_components/global_stylesheets/Header.css
@@ -15,6 +15,16 @@
     width: 20vw;
 }
 
+.header_name {
+    font-size: 2.2rem;
+    font-weight: 500;
+    color: white;
+    text-decoration: none;
+}
+.header_name:hover {
+    text-decoration: underline;
+}
+
 .header_panel {
     display: flex;
     justify-content: center;
@@ -80,10 +90,11 @@
     text-align: center;
     font-size: 1rem;
     width: auto;
-    padding: 2vw;
+    padding: 0 2vw;
     background: none;
     border: none;
     color: white;
+    text-decoration: none;
 }
 
 .nav_button:hover {
