--- a/react-app/src/components/myteams_components/myteams_stylesheets/MyTeams.css
+++ b/react-app/src/components/myteams_components/myteams_stylesheets/MyTeams.css
@@ -1,6 +1,7 @@
-#home {
+#addteams_box {
     display: flex;
+    width: 90vw;
+    padding: 5vh 5vw;
     justify-content: flex-start;
     align-items: center;
-    flex-direction: column;
 }
