--- a/react-app/src/components/landing_components/landing_stylsheets/Landing.css
+++ b/react-app/src/components/landing_components/landing_stylsheets/Landing.css
@@ -3,13 +3,12 @@
     src: url('../../../content/fonts/RobotoMono-VariableFont_wght.ttf');
 }
 
-.landing {
+#landing {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     height: 100vh;
     width: 100vw;
-    background: linear-gradient(0deg, rgba(0,33,61,1) 0%, rgba(0,122,163,1) 100%), linear-gradient(0deg, rgba(0,0,0,0.2) 0%, rgb(255, 255, 255) 100%);
 }
 
 #information {
