--- a/react-app/src/components/browseteams_components/browseteams_stylesheets/BrowseTeams.css
+++ b/react-app/src/components/browseteams_components/browseteams_stylesheets/BrowseTeams.css
@@ -65,8 +65,9 @@
     top: 30vh;
     flex-direction: column;
     border: 2px solid white;
-    padding: 40px;
+    padding: 30px;
     width: 20vw;
+    border-radius: 4px;
 }
 
 .clickedlistbutton {
@@ -77,4 +78,25 @@
     color: white;
     font-size: 1rem;
     padding: .5rem;
+}
+
+.form_title {
+    margin-bottom: 10%;
+}
+
+.form_label {
+    margin-bottom: 5%;
+    margin-top: 15%;
+}
+
+.rating_box {
+    display: flex;
+    width: 14vw;
+    justify-content: space-between;
+}
+
+.button_box {
+    display: flex;
+    width: 10vw;
+    justify-content: space-between;
 }
