--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -5,12 +5,12 @@
 
 * {
     font-family: 'Roboto';
-    overscroll-behavior: none;
     color: white;
 }
 
 .page {
-    background: linear-gradient(0deg, #2D3440 0%, #1f242c 100%), linear-gradient(0deg, rgba(0,0,0,0.2) 0%, rgb(255, 255, 255) 100%);
+    /* background: linear-gradient(0deg, #2D3440 0%, #1f242c 100%), linear-gradient(0deg, rgba(0,0,0,0.2) 0%, rgb(255, 255, 255) 100%); */
+    background: #2D3440;
 }
 
 .page_content {
