--- a/react-app/src/components/global_components/global_stylesheets/Dashboard.css
+++ b/react-app/src/components/global_components/global_stylesheets/Dashboard.css
@@ -7,13 +7,13 @@
 
 .dashboard_container {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
-  flex-direction: column;
   text-align: center;
   padding: 0 2vw;
   color: white;
   height: inherit;
+  width: 14vw;
 }
 
 .dashboard_btn {
