--- a/react-app/src/components/global_components/global_stylesheets/Header.css
+++ b/react-app/src/components/global_components/global_stylesheets/Header.css
@@ -3,93 +3,56 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    width: 100vw;
     height: 10vh;
     color: white;
     background: #00000080;
+    backdrop-filter: blur(4px);
+    z-index: 10;
 }
 
 .header_title {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    width: 20vw;
+    width: 30vw;
+    height: 4vh;
 }
 
-.header_name {
-    font-size: 2.2rem;
-    font-weight: 500;
-    color: white;
-    text-decoration: none;
-}
-.header_name:hover {
-    text-decoration: underline;
+#page_title {
+    font-size: 2rem;
+    height: inherit;
+    display: flex;
+    align-items: center;
 }
 
 .header_panel {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 40vw;
     color: white;
     height: inherit;
 }
 
 #account_panel {
+    display: flex;
     justify-content: flex-end;
-}
-
-#settings_icon {
-    width: 1.5vw;
-    filter: invert(1);
-
-}
-
-#close_icon {
-    width: 1.3vw;
-    filter: invert(1);
-}
-
-#close_button {
-    display: flex;
-    justify-content: space-evenly;
     align-items: center;
-    background: none;
-    border: none;
-    outline: none;
-    width: 4vw;
-    color: white;
-}
-
-#settings_button {
-    font-size: 1rem;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    background: none;
-    border: none;
-    outline: none;
-    width: 10vw;
-    color: white;
-}
-#settings_button:hover {
-    text-decoration: underline;
-}
-#settings_button:hover #settings_icon {
-    animation: spin ease-in-out;
-    animation-duration: 4000ms;
-    animation-duration: infinite;
+    width: 30vw;
 }
 
 #nav_panel {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
+    width: 40vw;
 }
 
 .nav_button {
     text-align: center;
     font-size: 1rem;
     width: auto;
+    height: 2.5vh;
     padding: 0 2vw;
     background: none;
     border: none;
@@ -97,14 +60,6 @@
     text-decoration: none;
 }
 
-.nav_button:hover {
-    text-decoration: underline;
-}
-
-@keyframes spin { 
-    from { 
-        transform: rotate(0deg); 
-    } to { 
-        transform: rotate(360deg); 
-    }
+#account_button {
+    width: 4vw;
 }
