--- a/react-app/src/components/login_components/login_stylesheets/Login.css
+++ b/react-app/src/components/login_components/login_stylesheets/Login.css
@@ -6,40 +6,38 @@
   justify-content: center;
 }
 
-.login_container {
+.template_container {
   display: flex;
+  justify-content: space-evenly;
+  align-items: center;
   flex-direction: column;
-  text-align: center;
   background-color: #00000080;
-  padding: 30px;
+  padding: 3vh 2vw;
 }
-.login_textBox {
-  padding: 10px;
-  font-size: 18px;
-  margin-bottom: 10px;
+
+#login_container {
+  height: 34vh;
 }
+
+#register_container {
+  height: 36vh;
+}
+
+#reset_container {
+  height: 18vh;
+}
+
 .login_btn {
-  padding: 10px;
-  font-size: 18px;
-  margin-bottom: 10px;
-  border: none;
-  color: white;
-  background-color: black;
+  width: 100%;
 }
-.login_google {
-  background-color: #4285f4;
-}
-.login div {
-  margin-top: 7px;
-}
-.login_link {
-  background: none;
-  border: none;
-  padding: 10px;
-  text-decoration: underline;
-  color: white;
-}
+
 .login_prompt {
-  padding-top: 10px;
-  color: white;
+  height: 2vh;
+}
+
+.login_link {
+  height: 4vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
