--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -35,3 +35,10 @@
     background: white;
     color: #2D3440;
 }
+
+.dividing_line {
+    height: 1px;
+    width: 80%;
+    /* background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255, 255, 255, 0.8) 50%, rgba(255,255,255,0) 100%); */
+    background: white;
+}
