styling and freshened up the look of the charts

--- a/react-app/src/components/browseteams_components/browseteams_stylesheets/BrowseTeams.css
+++ b/react-app/src/components/browseteams_components/browseteams_stylesheets/BrowseTeams.css
@@ -77,7 +77,7 @@
 }
 
 #liked_team_form .button_box #submit_team_button {
-    background: #82ca9d;
+    background: #5EDA8D;
 }
 
 #hated_team_form .button_box #submit_team_button {
