--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -40,5 +40,5 @@
     height: 1px;
     width: 80%;
     /* background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255, 255, 255, 0.8) 50%, rgba(255,255,255,0) 100%); */
-    background: white;
+    background: rgba(255, 255, 255, 0.685);
 }
