--- a/react-app/src/components/myteams_components/myteams_stylesheets/MyTeams.css
+++ b/react-app/src/components/myteams_components/myteams_stylesheets/MyTeams.css
@@ -19,7 +19,7 @@
 
 #hated_teams {
     margin-right: 7.5vw;
-    margin-left: 5vw;
+    margin-left: 2.5vw;
 }
 
 .team_list {
@@ -27,12 +27,17 @@
     justify-content: flex-start;
     align-items: flex-end;
     flex-direction: column;
-    width: 30vw;
+    width: 32.5vw;
     padding: 5vh 5vw;
     margin-top: 5vh;
     margin-bottom: 5vh;
     background: #ffffff27;
+    transition-duration: 300ms;
 }
+.team_list:hover {
+    background: #ffffff30;
+}
+
 .team_list h1 {
     margin: 4vh 2vw;
     width: auto;
@@ -40,7 +45,7 @@
 
 .teams_box {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: flex-start;
     width: 100vw;
 }
@@ -54,7 +59,7 @@
     width: 28vw;
     height: 10vh;
     margin: 1vh 0;
-    background: #000000bd;
+    background: #ffffff27;
 }
 
 .my_team_name {
@@ -91,22 +96,21 @@
 .odds_chart {
     display: flex;
     justify-content: flex-end;
-    align-items: flex-end;
+    align-items: center;
     width: 100%;
     height: 3vh;
+    transition-duration: 800ms;
 }
 
-.odds_chart:hover .odds_meter {
-    height: 2px;
+.odds_meter p {
+    display: none;
+    font-size: 1rem;
+    transition-duration: 500ms;
+    user-select: none;
 }
 
-.odds_chart:hover .odds_meter p {
-    font-size: 0;
-}
-
-.odds_chart .odds_meter p {
-    font-size: 12pt;
-    transition-duration: 100ms;
+.odds_meter:hover p {
+    display: flex;
 }
 
 
@@ -114,9 +118,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 3vh;
-    transition-duration: 150ms;
-    border: 1px solid white;
+    height: 2.75vh;
+    transition-duration: 500ms;
+    border: 1px solid rgba(255, 255, 255, 0.651);
+}
+
+.odds_meter:hover {
+    border: none;
+
 }
 
 .teams_header {
