--- a/react-app/src/components/myteams_components/myteams_stylesheets/MyTeams.css
+++ b/react-app/src/components/myteams_components/myteams_stylesheets/MyTeams.css
@@ -13,15 +13,6 @@
     align-items: center;
 }
 
-#liked_teams {
-    margin-left: 7.5vw;
-}
-
-#hated_teams {
-    margin-right: 7.5vw;
-    margin-left: 2.5vw;
-}
-
 .team_list {
     display: flex;
     justify-content: flex-start;
@@ -153,3 +144,58 @@
     justify-content: space-between;
 }
 
+@media only screen and (max-width: 768px) {
+    .teams_box {
+        flex-direction: column;
+    }
+
+    .team_list {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        flex-direction: column;
+        width: 80vw;
+        margin-left: 5vw;
+        margin-right: 5vw;
+        margin-bottom: 2.5vh;
+        padding: 1vh 5vw;
+    }
+
+    .my_teams {
+        width: 80vw;
+        height: 10vh;
+    }
+
+    .percentage_key {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .color_key {
+        justify-content: flex-start;
+    }
+
+    .color_box {
+        margin: 0 1vw;
+    }
+
+    .teams_header {
+        width: 100%;
+        height: 10vh;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .my_team_rating_box {
+        display: flex;
+    }
+
+    .my_team_rating_text {
+        display: none;
+    }
+
+    .my_team_name {
+        width: 38vw;
+    }
+}
